Avoid a crash in ProfileManager::GetLastUsedProfileAllowedByPolicy()

BUG=637333

Review-Url: https://codereview.chromium.org/2240823003
Cr-Commit-Position: refs/heads/master@{#413490}

Former-commit-id: 9f27972d0fbb00d451c9ae3f741d1e22ddd25891